# Hospital_AM

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Random64.cpp  Random64.h  bases.h  code.cpp  dynamics.cpp  dynamics.h  other_functions.cpp  other_functions.h  reaction.cpp  reaction.h  script.sh  test.cpp  test.h  trabajadores.cpp  trabajadores.h  trace.cpp  trace.h
R_0/: R0.nb
dat/: code.cpp  myconstants.h  scenarios.cpp  script.sh
data/: code.cpp  myconstants.h  scenarios.h
inc/: Random64.h  bases.h  constants.h  dynamics.h  other_CSV.h  other_functions.h  reaction.h  test.h  trabajadores.h  trace.h  workers.h
inc/Constants/: cons_contact.h  cons_dynamics.h  cons_rastreo.h  cons_test.h
res/: code.cpp  other_CSV.cpp  other_CSV.h
src/: Random64.cpp  constants.cpp  dynamics.cpp  other_CSV.cpp  other_functions.cpp  reaction.cpp  test.cpp  trabajadores.cpp  trace.cpp  workers.cpp
